”CSS基礎”の課題提出用

--- a/src/kadai-html.html
+++ b/src/kadai-html.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>HTML/CSSでWebページ作成</title>
+        <link rel="stylesheet" href="kadai-css.css">
     </head>
     <body>
         <header>
@@ -10,6 +11,7 @@
         </header>
         <div id="wrapper">
             <div id="main">
+                <h1>HTML/CSSでWebページ作成</h1>
                 <h2>Webサイトの仕組み</h2>
                     <p>Webサイトとは、Webページをひとまとまりにして公開したWebページの集まりのことです。</p>
                 <h3>Webブラウザとは</h3>
@@ -19,6 +21,7 @@
                 <h3>Webページの表示</h3>
                     <p>Webページの表示の説明が入ります。</p>
             </div>
+            <aside>
             <nav id="menu">
                 <ul>
                     <li>Webサイトの仕組み</li>
@@ -30,6 +33,7 @@
                     <li>HTMLチュートリアル</li>
                 </ul>
             </nav>
+            </aside>
         </div>
         <footer>
             <p>ここはフッターです。</p>
